<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_quantity"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:onClick="decrement"
            android:text="@string/decrease_button"
            android:textAllCaps="true"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_quantity"
            android:textColor="#000000"
            android:textSize="16sp" />


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:onClick="increment"
            android:text="@string/increase_button"
            android:textAllCaps="true"
            android:textColor="#000000" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/price_title"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/display_price"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:onClick="submitOrder"
        android:text="@string/button_order"
        android:textAllCaps="true"
        android:textColor="#000000" />


</LinearLayout>